- Amélioration du tri des natures d'incident proposées.
- Possibilité pour un utilisateur de supprimer un incident qu'il a déclaré si l'incident n'est rattaché à aucune mesure ni sanction.
- Pointage de menus incidents: Possibilité de définir des seuils pour envoi de mail, message sur les pointages de menus incidents.

Absences2:
- Ajout de liens de création d'incident de puis mod_abs2 Saisir groupe.
- Accès à la liste des saisies de la veille pour tel élève depuis la colonne Veille dans Absences du jour.

Cahiers de textes:
- Possibilité d'ajouter un témoin 'contrôle' dans les travaux à faire du CDT.
- Page résumé/simplifiée élève : Précision des dates de travaux futurs en title.

Carnet de notes:
- Affichage du nombre de notes inférieures/supérieures à 10.
- Accès en statut autre à la Visualisation des moyennes de carnets de notes (ajout d'un droit).

Bulletins:
- Accès en statut autre au Tableau récapitulatif des moyennes d'une classe dans le cas où l'utilisateur a accès aux bulletins simplifiés ou non.

Panneau d'affichage:
- Possibilité de déposer un message pour les professeurs principaux.

Publipostage OOo:
- Possibilité d'autoriser tel utilisateur en particulier à uploader des modèles.

Général:
- Possibilité de prendre en compte un secure/proxy.php pour file_get_contents()
- Automatisation du changement de PP et de CPE lors du changement de classe.

AID :
- Si l'AID autorise le multi-inscription, on peut choisir de limiter aux inscrits à une autre AID de la même catégorie :
Exemple :
En administrateur, on crée une "catégorie d'AID" → 'Association Sportive'
   On coche Inscriptions multiples :
En administrateur ou gestionnaire de la catégorie d'AID, on crée une AID → Licenciers
   On saisie tous les membres de l'association sportive
En administrateur ou gestionnaire de la catégorie d'AID, on crée de nouvelles AID en cochant Sous-groupe d'une autre AID puis en choisissant Licenciers