@@ -1301,3 +1301,13 @@ parent varchar(100) NOT NULL ,
 PRIMARY KEY ( id ), 
 UNIQUE KEY `aid` (`aid`)
 ) ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;
+
+DROP TABLE IF EXISTS s_sanctions_check;
+CREATE TABLE IF NOT EXISTS s_sanctions_check (
+id INT(11) NOT NULL auto_increment,
+id_sanction INT(11) NOT NULL,
+etat varchar(100) NOT NULL ,
+login varchar(50) NOT NULL ,
+PRIMARY KEY ( id )
+) ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;
+
